js changes with ajax for API

--- a/DigitallyPowerful/Views/Home/Index.cshtml
+++ b/DigitallyPowerful/Views/Home/Index.cshtml
@@ -92,10 +92,11 @@
                 </div>
 
                 <div class="row content">
-                    <div class="col-lg-6">
+                    <div class="col-lg-12">
                         <p>
-                            Our strategists have worked at leading companies and designed
-                            trendsetting campaigns.
+                            Digitally powerful is a team of multiple influencers/content creators who would be helping you out in your digital marketing requirements in a very digitally powerful mode.
+                            With an eye for detail we would be building an efficient plan in creating a content for your digital success, also by bridging the gap between a brand and influencer.
+                            With us, you would have a huge option of contents to choose from, considering the numbers of content creators that we are partnering with.
                         </p>
                         <ul>
                             <li><i class="ri-check-double-line"></i> Reliable, fast & efficient delivery</li>
@@ -110,13 +111,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-lg-6 pt-4 pt-lg-0">
-                        <p>
-                            From renowned celebrities to local micro influencers, from Instagram legends to Tik Tok stars and from individuals to large companies, One Impression has access to a truly wide network. Our strategists have worked at leading companies and designed trendsetting campaigns.
-                        </p>
-                    </div>
                 </div>
-
             </div>
         </section>
         <!-- End About Us Section -->
@@ -125,8 +120,8 @@
             <div class="container" data-aos="fade-up">
 
                 <div class="section-title">
-                    <h2>Influencers</h2>
-                    <p>From renowned celebrities to local micro influencers, from Instagram legends to Tik Tok stars and from individuals to large companies, One Impression has access to a truly wide network. Our strategists have worked at leading companies and designed trendsetting campaigns.</p>
+                    <h2>Network</h2>
+                    <p>From renowned celebrities to local micro influencers, from Instagram legends to Tik Tok stars and from individuals to large companies, Digitally Powerful has access to a truly wide network.</p>
                 </div>
 
                 <ul id="portfolio-flters" class="d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
