--- a/DigitallyPowerful/Views/User/Login.cshtml
+++ b/DigitallyPowerful/Views/User/Login.cshtml
@@ -8,10 +8,8 @@
 
 <body class="login">
     <header id="header" class="fixed-top " style="background: #36517e">
-        <div class="container d-flex align-items-center">
-            <h1 class="logo me-auto"><a asp-controller="Home" asp-action="Index">Digitally Powerful</a></h1>
-            <!-- Uncomment below if you prefer to use an image logo -->
-            <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+        <div class="container d-flex align-items-center">           
+             <a asp-controller="Home" asp-action="Index" class="logo me-auto"><img src="~/images/DigitallyPowerful.png" alt="Digitally Powerful" class="img-fluid"></a>
         </div>
     </header><!-- End Header -->
     <div class="wrapper wrapper-login">
@@ -38,7 +36,7 @@
                     <a asp-controller="User" asp-action="Brand" class="link float-right">Forgot Password ?</a>
                 </div>
                 <div class="form-action mb-3">
-                    <a asp-controller="User" asp-action="Influencer" class="btn btn-primary btn-rounded btn-login" id="signin">Sign In</a>
+                    <button class="btn btn-primary btn-rounded btn-login" id="signin">Sign In</button>
                 </div>
                 <div class="login-account">
                     <span class="msg">Don't have an account yet ?</span>
