--- a/DigitallyPowerful/Views/Shared/_Layout.cshtml
+++ b/DigitallyPowerful/Views/Shared/_Layout.cshtml
@@ -31,15 +31,12 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top ">
         <div class="container d-flex align-items-center">
-
-            @*<h1 class="logo me-auto"><a asp-controller="Home" asp-action="Index">Digitally Powerful</a></h1>*@
-            <!-- Uncomment below if you prefer to use an image logo -->
-            <a href="index.html" class="logo me-auto"><img src="~/images/DigitallyPowerful.jpg" alt="" class="img-fluid"></a>
+            <a asp-controller="Home" asp-action="Index" class="logo me-auto"><img src="~/images/DigitallyPowerful.png" alt="Digitally Powerful" class="img-fluid"></a>
             <nav id="navbar" class="navbar">
                 <ul>
                     <li><a class="nav-link scrollto active" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a class="nav-link scrollto" href="#about">About</a></li>
-                    <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
+                    <li><a class="nav-link scrollto" href="#portfolio">Network</a></li>
                     <li><a class="nav-link scrollto" href="#team">Team</a></li>
                     <li><a class="nav-link scrollto" asp-controller="Home" asp-action="Contact" target="_blank">Contact</a></li>
                     <li><a class="getstarted scrollto" asp-controller="User" asp-action="Login">Login</a></li>
@@ -58,7 +55,7 @@
                 <div class="container">
                     <div class="row">
 
-                        <div class="col-lg-3 col-md-6 footer-contact">
+                        <div class="col-lg-4 col-md-7 footer-contact">
                             <h3>Digitally Powerful</h3>
                             <p>
                                 291, Alapakkam <br />
@@ -72,12 +69,11 @@
                         <div class="col-lg-3 col-md-6">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d242.9251646957934!2d80.17026672125154!3d13.048231311570767!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a52613c729c67f3%3A0x64ce58d3fdb23306!2s10th%20St%2C%20Ashtalakshmi%20Nagar%2C%20Chennai%2C%20Tamil%20Nadu%20600087!5e0!3m2!1sen!2sin!4v1624207173906!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 230px;" allowfullscreen></iframe>
                         </div>
-                        <div class="col-lg-3 col-md-6 footer-links">
+                        <div class="col-lg-2 col-md-5 footer-links">
                             <h4>Useful Links</h4>
                             <ul>
                                 <li><i class="bx bx-chevron-right"></i> <a asp-controller="Home" asp-action="Index">Home</a></li>
                                 <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-                                <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
                                 <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
                                 <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
                             </ul>
@@ -106,7 +102,7 @@
                     <script>document.write(new Date().getFullYear())</script>  Copyright <strong><span>Digitally Powerful</span></strong>. All Rights Reserved.
                 </div>
                 <div class="credits">
-                    Designed by <a href="https://techiepods.com/">TechiePods</a>
+                    Designed by <a href="https://techiepods.com/" target="_blank">TechiePods</a>
                 </div>
             </div>
 
