--- a/DigitallyPowerful/Views/User/Sign_up.cshtml
+++ b/DigitallyPowerful/Views/User/Sign_up.cshtml
@@ -7,15 +7,13 @@
 <html lang="en">
 
 <body class="login">
-    <header id="header" class="fixed-top " style="background: #36517e">
+    <header id="header" class="fixed-top " style="background: #f9fbfd">
         <div class="container d-flex align-items-center">
-            <h1 class="logo me-auto"><a asp-controller="Home" asp-action="Index">Digitally Powerful</a></h1>
-            <!-- Uncomment below if you prefer to use an image logo -->
-            <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+             <a asp-controller="Home" asp-action="Index" class="logo me-auto"><img src="~/images/DigitallyPowerful.png" alt="Digitally Powerful" class="img-fluid"></a>
         </div>
     </header><!-- End Header -->
 
-    <div class="wrapper wrapper-login wrapper-login-full p-0">
+    <div class="wrapper wrapper-login wrapper-login-full p-0" style="top:20px !important">
         <div class="login-aside w-50 d-flex flex-column align-items-center text-center bg-secondary-gradient">
             <h1 class="title fw-bold text-white mb-3"></h1>
             <p class="subtitle text-white op-7">Sign up to view the list of influencers associated with us and create tailored campaign! or use the below option to contact us.</p>
@@ -95,7 +93,7 @@
                 <div class="login-form">
                     <div class="form-group form-floating-label">
                         <input id="Brandname_Brand" name="Brandname_Brand" type="text" class="form-control input-border-bottom" required="">
-                        <label for="Brandname_Brand" class="placeholder">Brand Name</label>
+                        <label for="Brandname_Brand" class="placeholder">Brand Name *</label>
                     </div>
                     <div class="form-group form-floating-label">
                         <input id="Contactname_Brand" name="Contactname_Brand" type="text" class="form-control input-border-bottom" required="">
@@ -103,11 +101,11 @@
                     </div>
                     <div class="form-group form-floating-label">
                         <input id="Mobile_Brand" name="Mobile_Brand" type="tel" class="form-control input-border-bottom" required="">
-                        <label for="Mobile_Brand" class="placeholder">Mobile</label>
+                        <label for="Mobile_Brand" class="placeholder">Mobile *</label>
                     </div>
                     <div class="form-group form-floating-label">
                         <input id="email_Brand" name="email_Brand" type="email" class="form-control input-border-bottom" required="">
-                        <label for="email_Brand" class="placeholder">Email</label>
+                        <label for="email_Brand" class="placeholder">Email *</label>
                     </div>
                     <div class="form-group form-floating-label">
                         <input id="passwordsignup_Brand" name="passwordsignup_Brand" type="password" class="form-control input-border-bottom" required="">
@@ -126,11 +124,11 @@
                     <div class="row form-sub m-0">
                         <div class="custom-control custom-checkbox">
                             <input type="checkbox" class="custom-control-input" name="agree_Brand" id="agree_Brand">
-                            <label class="custom-control-label" for="agree_Brand">I Agree to the terms and conditions.</label>
+                            <label class="custom-control-label" for="agree_Brand">I Agree to the terms and conditions. *</label>
                         </div>
                     </div>
                     <div class="form-action">
-                        <a asp-controller="User" asp-action="Influencer" id="signup_Brand" class="btn btn-primary btn-rounded btn-login">Sign Up</a>
+                        <button id="signup_Brand" class="btn btn-primary btn-rounded btn-login">Sign Up</button>
                         <a asp-controller="User" asp-action="Login" id="show-signin" class="btn btn-danger btn-link btn-login mr-3">Cancel</a>
                     </div>
                 </div>
