Brand profile changes

--- a/DigitallyPowerful/Views/Shared/_UserLayout.cshtml
+++ b/DigitallyPowerful/Views/Shared/_UserLayout.cshtml
@@ -88,10 +88,10 @@
                                 Influencer led marketing platform for campaigns on Instagram, Youtube, Facebook and more social networks.
                             </p>
                             <div class="social-links mt-3">
-                                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                                <a href="https://api.whatsapp.com/send?phone=+919342038434" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+                                <a href="#" class="instagram" style="background-color: #fb3958"><i class="bx bxl-instagram"></i></a>
+                                <a href="#" class="facebook" style="background-color: #4267B2"><i class="bx bxl-facebook"></i></a>
+                                <a href="#" class="twitter" style="background-color: #1DA1F2"><i class="bx bxl-twitter"></i></a>
+                                <a href="https://api.whatsapp.com/send?phone=+919342038434" style="background-color: #00e676" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
                             </div>
                         </div>
 
@@ -168,9 +168,6 @@
 
     <!-- jQuery Validation -->
     <script src="~/assets/js//plugin/jquery.validate/jquery.validate.min.js"></script>
-
-    <!-- Owl Carousel -->
-    <script src="~/assets/js/plugin/owl-carousel/owl.carousel.min.js"></script>
 
     <!-- Magnific Popup -->
     <script src="~/assets/js//plugin/jquery.magnific-popup/jquery.magnific-popup.min.js"></script>
