--- a/DigitallyPowerful/Views/User/Influencer.cshtml
+++ b/DigitallyPowerful/Views/User/Influencer.cshtml
@@ -129,8 +129,8 @@
                                     <tbody>
                                         <tr>
                                             <td>
-                                                <button type="button" class="btn btn-icon btn-round btn-danger">
-                                                    <i class="fab fa-instagram"></i>
+                                                <button type="button" class="btn btn-icon btn-round" style="background-color: #fb3958">
+                                                    <i class="fab fa-instagram" style="color:white"></i>
                                                 </button>
                                             </td>
                                             <td>
@@ -154,8 +154,8 @@
                                         </tr>
                                         <tr>
                                             <td>
-                                                <button type="button" class="btn btn-icon btn-round btn-danger">
-                                                    <i class="fab fa-youtube"></i>
+                                                <button type="button" class="btn btn-icon btn-round" style="background-color: #FF0000">
+                                                    <i class="fab fa-youtube" style="color:white"></i>
                                                 </button>
                                             </td>
                                             <td>
@@ -179,8 +179,8 @@
                                         </tr>
                                         <tr>
                                             <td>
-                                                <button type="button" class="btn btn-icon btn-round btn-primary">
-                                                    <i class="fab fa-facebook"></i>
+                                                <button type="button" class="btn btn-icon btn-round" style="background-color: #4267B2">
+                                                    <i class="fab fa-facebook" style="color:white"></i>
                                                 </button>
                                             </td>
                                             <td>
@@ -204,8 +204,8 @@
                                         </tr>
                                         <tr>
                                             <td>
-                                                <button type="button" class="btn btn-icon btn-round btn-info">
-                                                    <i class="fab fa-twitter"></i>
+                                                <button type="button" class="btn btn-icon btn-round" style="background-color: #1DA1F2">
+                                                    <i class="fab fa-twitter" style="color:white"></i>
                                                 </button>
                                             </td>
                                             <td>
