--- a/DigitallyPowerful/Views/Shared/_Layout.cshtml
+++ b/DigitallyPowerful/Views/Shared/_Layout.cshtml
@@ -85,10 +85,10 @@
                                 Influencer led marketing platform for campaigns on Instagram, Youtube, Facebook and more social networks.
                             </p>
                             <div class="social-links mt-3">
-                                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                                <a href="https://api.whatsapp.com/send?phone=+919342038434" target="_blank" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+                                <a href="#" class="instagram" style="background-color: #fb3958"><i class="bx bxl-instagram"></i></a>
+                                <a href="#" class="facebook" style="background-color: #4267B2"><i class="bx bxl-facebook"></i></a>
+                                <a href="#" class="twitter" style="background-color: #1DA1F2"><i class="bx bxl-twitter"></i></a>
+                                <a href="https://api.whatsapp.com/send?phone=+919342038434" style="background-color: #00e676" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
                             </div>
                         </div>
 
@@ -110,11 +110,9 @@
         <!-- End Footer -->
     </div>
 
-    <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
-    </environment>
 
     <div id="preloader"></div>
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
