--- a/DigitallyPowerful/Views/User/Brand.cshtml
+++ b/DigitallyPowerful/Views/User/Brand.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Contact";
     Layout = "~/Views/Shared/_UserLayout.cshtml";
 }
-<body>
+<body onload="login_brand()">
     <header id="header" class="fixed-top " style="background: #f9fbfd">
         <div class="container d-flex align-items-center">
             <a asp-controller="Home" asp-action="Index" class="logo me-auto"><img src="~/images/DigitallyPowerful.png" alt="Digitally Powerful" class="img-fluid"></a>
@@ -29,17 +29,17 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="row mt-3">
+                            <div class="row">
                                 <div class="col-md-6">
-                                    <div class="form-group form-floating-label">
-                                        <input type="text" class="form-control" id="BrandProfile_Email" required="">
-                                        <label for="BrandProfile_Email" class="placeholder">Email</label>
+                                    <div class="form-group">
+                                        <label for="BrandProfile_Email">Email</label>
+                                        <input type="text" class="form-control" id="BrandProfile_Email" required="" disabled>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="form-group form-floating-label">
+                                    <div class="form-group">
+                                        <label for="BrandProfile_Mobile">Mobile</label>
                                         <input type="text" class="form-control" id="BrandProfile_Mobile" required="">
-                                        <label for="BrandProfile_Mobile" class="placeholder">Mobile</label>
                                     </div>
                                 </div>
                             </div>
@@ -47,8 +47,8 @@
                                 <div class="col-md-6">
                                     <div class="form-group form-floating-label">
                                         <select class="form-control form-control" id="BrandProfile_Project">
-                                            <option>Influencer Marketing</option>
-                                            <option>Others</option>
+                                            <option value="1">Influencer Marketing</option>
+                                            <option value="2">Others</option>
                                         </select>
                                         <label for="BirthDate" class="placeholder">Project Type</label>
                                     </div>
@@ -60,11 +60,20 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label for="comment">Brand Description</label>
+                                        <textarea class="form-control" id="BrandProfile_Description" rows="4">
+												</textarea>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card card-profile" style="height: 90%;">
+                    <div class="card card-profile" style="height: 94%;">
                         <div class="col-lg-5 col-md-5 col-sm-12 ml-auto mr-auto">
                             <div class="input-file input-file-image">
                                 <img class="img-upload-preview img-circle" width="100" height="100" src="~/images/favicon.png" alt="preview">
@@ -74,9 +83,25 @@
                         </div>
                         <div class="card-body" style="padding: 17px;">
                             <div class="user-profile text-center">
-                                <div class="name" id="ProfileLogoName">Hizrian</div>
-                                <div class="job">Verified <i id="VerifiedLogo" class="far fa-check-circle"></i><i id="UnverifiedLogo" class="far fa-times-circle"></i></div>
-                                <div class="desc"></div>
+                                <div class="name" id="ProfileLogoName_Brand"></div>
+                                <div class="job" id="ProfileName_Brand"></div>
+                                <div class="desc">Verified <i id="VerifiedLogo" class="far fa-check-circle" style="display:none"></i><i id="UnverifiedLogo" class="far fa-times-circle"></i></div>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <div class="text-center mt-3 mb-3">
+                                <button class="btn btn-success btn-round" id="BrandProfile_Save">
+                                    Save &nbsp;
+                                    <span class="btn-label">
+                                        <i class="fa fa-check"></i>
+                                    </span>
+                                </button>
+                                <button class="btn btn-danger btn-round" id="BrandProfile_Cancel">
+                                    Cancel &nbsp;
+                                    <span class="btn-label">
+                                        <i class="fa fa-times"></i>
+                                    </span>
+                                </button>
                             </div>
                         </div>
                     </div>
@@ -104,18 +129,18 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <div class="text-right mt-3 mb-3">
-                                <button class="btn btn-success btn-round">
+                            <div class="text-center mt-3 mb-3">
+                                <button class="btn btn-success btn-round" id="BrandProfile_Send">
+                                    Send &nbsp;
                                     <span class="btn-label">
-                                        <i class="fa fa-check"></i>
+                                        <i class="far fa-paper-plane"></i>
                                     </span>
-                                    Send
                                 </button>
-                                <button class="btn btn-danger btn-round">
+                                <button class="btn btn-danger btn-round" id="BrandProfile_Undo">
+                                    Cancel &nbsp;
                                     <span class="btn-label">
                                         <i class="fa fa-times"></i>
                                     </span>
-                                    Cancel
                                 </button>
                             </div>
                         </div>
@@ -129,7 +154,21 @@
                             <div class="card-title">Influencers</div>
                         </div>
                         <div class="card-body">
-
+                            <div class="table-responsive">
+                                <div id="InfluencerList_datatable" class="dataTables_wrapper container-fluid dt-bootstrap4">
+                                    <table id="InfluencerList" class="table display">
+                                        <thead>
+                                            <tr>
+                                                <th>#</th>
+                                                <th>Name</th>
+                                                <th>Gender</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
                         </div>
                         <div class="card-footer">
 
@@ -139,5 +178,6 @@
             </div>
         </div>
     </div>
+    <script src="~/js/Brand.js" asp-append-version="true"></script>
 </body>
 
