--- a/DigitallyPowerful/Views/Home/Index.cshtml
+++ b/DigitallyPowerful/Views/Home/Index.cshtml
@@ -14,10 +14,10 @@
                     <div class="d-flex justify-content-center justify-content-lg-start">
                         <div class="row">
                             <div class="col-md-6">
-                                <a asp-controller="User" asp-action="Sign_up" class="btn-get-started scrollto">BRAND</a>
+                                <button id="Index_Brand" class="button-two"><span>BRAND</span></button>
                             </div>
                             <div class="col-md-6">
-                                <a asp-controller="User" asp-action="Signup" class="btn-get-started scrollto">INFLUENCER</a>
+                                <button id="Index_Influencer" class="button-two"><span>INFLUENCER</span></button>
                             </div>
                         </div>
                     </div>
@@ -235,9 +235,9 @@
                         <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="100">
                             <div class="pic"><img src="~/images/team/team-1.jpg" class="img-fluid" alt=""></div>
                             <div class="member-info">
-                                <h4>Walter White</h4>
-                                <span>Chief Executive Officer</span>
-                                <p>Explicabo voluptatem mollitia et repellat qui dolorum quasi</p>
+                                <h4>Abiram Siddarth</h4>
+                                <span>Content Marketing Manager</span>
+                                <p>Create, edit and improve the content that audience is looking for and optimize the path to conversion.</p>
                                 <div class="social">
                                     <a href=""><i class="ri-twitter-fill"></i></a>
                                     <a href=""><i class="ri-facebook-fill"></i></a>
@@ -252,9 +252,9 @@
                         <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
                             <div class="pic"><img src="~/images/team/team-2.jpg" class="img-fluid" alt=""></div>
                             <div class="member-info">
-                                <h4>Sarah Jhonson</h4>
-                                <span>Product Manager</span>
-                                <p>Aut maiores voluptates amet et quis praesentium qui senda para</p>
+                                <h4>Naveen Prasad</h4>
+                                <span>Social Media Marketing Expert</span>
+                                <p>Create social media marketing strategy and campaign by content idea, budget plan, implementing schedules.</p>
                                 <div class="social">
                                     <a href=""><i class="ri-twitter-fill"></i></a>
                                     <a href=""><i class="ri-facebook-fill"></i></a>
