--- a/DigitallyPowerful/Views/User/Sign_up.cshtml
+++ b/DigitallyPowerful/Views/User/Sign_up.cshtml
@@ -14,7 +14,7 @@
     </header><!-- End Header -->
 
     <div class="wrapper wrapper-login wrapper-login-full p-0" style="top:20px !important">
-        <div class="login-aside w-50 d-flex flex-column align-items-center text-center bg-secondary-gradient">
+        <div class="login-aside w-50 d-flex flex-column align-items-center text-center" style="background: linear-gradient( 90deg, #74ebd5 0%,#acb6e5 100% );">
             <h1 class="title fw-bold text-white mb-3"></h1>
             <p class="subtitle text-white op-7">Sign up to view the list of influencers associated with us and create tailored campaign! or use the below option to contact us.</p>
             <div class="w-100">
