--- a/DigitallyPowerful/Views/Home/Contact.cshtml
+++ b/DigitallyPowerful/Views/Home/Contact.cshtml
@@ -66,11 +66,11 @@
                         <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                             <div class="row">
                                 <div class="form-group col-md-6">
-                                    <label for="Contact_name">Your Name</label>
+                                    <label for="Contact_name">Name</label>
                                     <input type="text" name="Contact_name" class="form-control" id="Contact_name" required>
                                 </div>
                                 <div class="form-group col-md-6">
-                                    <label for="Contact_email">Your Email</label>
+                                    <label for="Contact_email">Email</label>
                                     <input type="email" class="form-control" name="Contact_email" id="Contact_email" required>
                                 </div>
                             </div>
