--- a/DigitallyPowerful/Views/User/Influencer.cshtml
+++ b/DigitallyPowerful/Views/User/Influencer.cshtml
@@ -94,7 +94,7 @@
                     <div class="card card-profile" style="height: 90%;">
                         <div class="col-lg-5 col-md-5 col-sm-12 ml-auto mr-auto">
                             <div class="input-file input-file-image">
-                                <img class="img-upload-preview img-circle" width="100" height="100" src="~/images/favicon.png" alt="preview">
+                                <img class="img-upload-preview" style="border-radius: 35px;" @*img-circle*@ width="100" height="100" src="~/images/favicon.png" alt="preview">
                                 <input type="file" class="form-control form-control-file" id="uploadImg" name="uploadImg" accept="image/*"  required="">
                                 <label for="uploadImg" class="btn btn-primary btn-round btn-lg" style="display:none">Image<i class="fas fa-upload"></i></label>
                             </div>
