--- a/DigitallyPowerful/Views/Home/Index.cshtml
+++ b/DigitallyPowerful/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-                    <img src="~/images/hero-img.png" class="img-fluid animated" alt="">
+                    <img src="~/images/DigitallyPowerful_Poster.png" class="img-fluid animated" alt="">
                 </div>
             </div>
         </div>
@@ -36,7 +36,10 @@
         <!-- ======= Clients Section ======= -->
         <section id="cliens" class="cliens section-bg">
             <div class="container">
-
+                <div class="section-title">
+                    <h2>Brands</h2>
+                    <p>We have worked with Popular brands as well as small entities in setting up campaigns to create a powerful business digitally.</p>
+                </div>
                 <div class="row" data-aos="zoom-in">
 
                     <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
@@ -216,6 +219,58 @@
                         </div>
                     </div>
 
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-YouTubers">
+                        <div class="portfolio-img"><img src="~/images/DigitallyPowerful_Poster.png" class="img-fluid" alt=""></div>
+                        <div class="portfolio-info">
+                            <h4>Digitally Powerful</h4>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-12 col-md-12 portfolio-item filter-Meme">
+                        <section id="meme" class="team">
+                            <div class="container aos-init aos-animate" data-aos="fade-up">
+
+                                <div class="section-title">
+                                    <p>We are associated with Meme Pages to market your brand and thereby creating brand awareness........ </p>
+                                </div>
+
+                                <div class="row">
+
+                                    <div class="col-lg-12">
+                                        <div class="member d-flex align-items-start aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
+                                            <div class="member-info">
+                                                <h4>What is Meme Marketing?</h4>
+                                                <p>
+                                                    It is no denying that we often find ourselves dragged into the whirlpool of memes, no matter what social media platform we are using Facebook, Twitter, Instagram, Tumblr or even Pinterest. Memes have become so popular on social media that there are social media profiles completely dedicated towards creating and sharing memes with their followers. Such social media ‘memers’ have managed to gather a huge following over the years through their humor.
+                                                </p>
+                                                <p>
+                                                    Like so, the meme culture has become a huge untapped opportunity for the marketers to increase brand advocacy. Meme marketing has become an extension of viral marketing. Keeping in mind the reachability of memes, brands are now targeting the meme community to create brand awareness.
+                                                </p>
+                                                <p>
+                                                    This is more commonly termed as memejacking among the marketers. It simply means the use of memes in order to maximize brand advocacy by placing them carefully on these social media stimulants.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-lg-12">
+                                        <div class="member d-flex align-items-start aos-init aos-animate" data-aos="zoom-in" data-aos-delay="100">
+                                            <div class="member-info">
+                                                <h4>Why should you go for Meme Marketing?</h4>
+                                                <p>
+                                                    Users consume huge quantities of memes on daily basis; hence, memes make a great way by which marketers can catch and keep audience’s attention. They have become the latest weapon for marketers because of its ability to communicate the story without the use of many words and their ability to spread fast throughout the internet like forest fires. Memes reach and connect with audience beyond the conventional methods. Being cost effective, easy to create and offering a good ROI, meme marketing has given the much-needed glow up to advertising, bringing about a revolution in digital marketing.
+                                                </p>
+                                                <p>
+                                                    Meme marketing is the answer to- “How to reach and connect with the millennials?”. The meme market now has its own place in the digital market as viral meme marketing continues to win and bring the prize (leads) home. And we as the leading meme marketing agency in India is fully leveraging the power of memes in marketing and branding.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </section>
+                    </div>
                 </div>
             </div>
         </section>
