--- a/DigitallyPowerful/Views/Shared/_Layout.cshtml
+++ b/DigitallyPowerful/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
 
     <!-- Template Main CSS File -->
     <link href="~/css/style.css" rel="stylesheet">
+
 </head>
 <body>
     <!-- ======= Header ======= -->
@@ -34,7 +35,7 @@
             <a asp-controller="Home" asp-action="Index" class="logo me-auto"><img src="~/images/DigitallyPowerful.png" alt="Digitally Powerful" class="img-fluid"></a>
             <nav id="navbar" class="navbar">
                 <ul>
-                    <li><a class="nav-link scrollto active" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
                     <li><a class="nav-link scrollto" href="#about">About</a></li>
                     <li><a class="nav-link scrollto" href="#portfolio">Network</a></li>
                     <li><a class="nav-link scrollto" href="#team">Team</a></li>
@@ -99,7 +100,8 @@
             <div class="container footer-bottom clearfix">
                 <div class="copyright">
                     &copy;
-                    <script>document.write(new Date().getFullYear())</script>  Copyright <strong><span>Digitally Powerful</span></strong>. All Rights Reserved.
+                    <script>document.write(new Date().getFullYear())</script>  Copyright
+                    <strong><span>Digitally Powerful</span></strong>. All Rights Reserved.
                 </div>
                 <div class="credits">
                     Designed by <a href="https://techiepods.com/" target="_blank">TechiePods</a>
@@ -110,9 +112,9 @@
         <!-- End Footer -->
     </div>
 
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
 
     <div id="preloader"></div>
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
