--- a/DigitallyPowerful/Views/User/Sign_up.cshtml
+++ b/DigitallyPowerful/Views/User/Sign_up.cshtml
@@ -16,7 +16,7 @@
     <div class="wrapper wrapper-login wrapper-login-full p-0" style="top:20px !important">
         <div class="login-aside w-50 d-flex flex-column align-items-center text-center" style="background: linear-gradient( 90deg, #74ebd5 0%,#acb6e5 100% );">
             <h1 class="title fw-bold text-white mb-3"></h1>
-            <p class="subtitle text-white op-7">Sign up to view the list of influencers associated with us and create tailored campaign! or use the below option to contact us.</p>
+            <p class="subtitle text-white op-7">Sign up to create a tailored campaign with the influencers associated with Digitally Powerful or use the below option to contact us.</p>
             <div class="w-100">
                 <div class="row">
                     <div class="col-md-12">
@@ -75,11 +75,11 @@
                         </div>
                         <div class="row">
                             <div class="col-md-4 ml-auto mr-auto">
-                                <button class="btn btn-success btn-round" id="BrandContact_send">
+                                <button class="btn btn-primary btn-round" id="BrandContact_send">
+                                    Submit &nbsp;
                                     <span class="btn-label">
                                         <i class="far fa-paper-plane"></i>
                                     </span>
-                                    Submit
                                 </button>
                             </div>
                         </div>
@@ -136,6 +136,4 @@
         </div>
     </div>
 </body>
-
-
 </html>
